# todo-indicator

./: .gitignore  Cargo.toml  README.md  config.yaml.example  default.nix  gitlab_todo_indicator.py  i18n.toml  justfile  package.nix
i18n/en/: gitlab_todo_indicator.ftl
res/: com.gitlab.todo-indicator.desktop  com.gitlab.todo-indicator.metainfo.xml
src/: app.rs  config.rs  gitlab.rs  localization.rs  main.rs
