[package]
name = "gitlab-todo-indicator"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A COSMIC applet that displays the number of GitLab TODO items"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic.git", features = ["applet", "winit"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7"
rust-embed = "8.0"

[profile.release]
lto = "thin"

[[bin]]
name = "gitlab-todo-indicator"
path = "src/main.rs"