[package]
name = "gitlab-todo-indicator"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A COSMIC applet that displays the number of GitLab TODO items"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic.git", features = ["applet", "wayland"], default-features = false }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], default-features = false }

[profile.release]
lto = "thin"

[[bin]]
name = "gitlab-todo-indicator"
path = "src/main.rs"